# Aegis

./: README.md
.github/workflows/: ci.yml
api/: Dockerfile  openapi.json  pyproject.toml  requirements.txt
api/app/: main.py  telemetry.py
api/app/auth/: __init__.py  jwt.py
api/app/models/: __init__.py  auth_identity.py  base.py  intervention.py  risk_score.py  symptom_log.py  user.py  wearable_snapshot.py
api/app/routers/: analytics.py  auth.py  interventions.py  risk.py  symptoms.py  wearables.py
api/app/schemas/: auth.py  interventions.py  risk.py  symptoms.py  wearables.py
api/app/services/: analytics.py  db.py  interventions.py  ml.py
api/app/tests/: __init__.py  test_api.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLIANCE_GUARDRAILS.md  DEMO_SCRIPT.md  PRODUCT_PRD.md  PRODUCT_STRATEGY.md  ROADMAP.md  RUNBOOKS.md  SECURITY_PRIVACY.md  TEST_STRATEGY.md
docs/ADR/: ADR-0001-Architecture.md  ADR-0002-Model-Serving.md  ADR-0003-Data-Retention.md
etl/beam_jobs/: feature_build.py  ingest_notes.py  ingest_wearables.py
etl/infra/schemas/: features.json  symptom_logs.json  wearable_snapshots.json
frontend-mobile/: app.json  package.json
frontend-mobile/src/app/: App.tsx
frontend-web/: next.config.js  package.json
infra/: main.tf  outputs.tf  variables.tf
ml/serving/: Dockerfile  config.properties  handler.py
ml/training/: eval.py  inference_schema.json  requirements.txt  train.py
ops/alerts/: alerts.yml
ops/grafana/: dashboard.json
ops/prometheus/: prometheus.yml
scripts/: load_test.k6.js  seed_data.py
(+8 files in other folders)
